--- a/src/index.css
+++ b/src/index.css
@@ -207,13 +207,57 @@
 .connect-box {
   background-color: transparent; /* Update to have a transparent background */
   border: 1px solid white; /* Add a border for visibility, adjust as needed */
-  padding: 10px; /* Adjust padding as needed */
+  /* padding: 15px; Adjust padding as needed */
   /* border-radius: 8px; Adjust border-radius for rounded corners */
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Optional: Add a subtle box shadow */
   display: inline-block; /* Ensure the box only takes the space it needs */
+  
 }
 
 /* Apply the .connect-box class to the "Let's Connect" link in the mobile menu */
 li.connect-box a {
+  
   color: white; /* Set text color to white */
+}
+
+.connect-box {
+  
+  font-weight: 700;
+  color: #fff;
+  border: 1px solid #fff;
+  padding: 16px 28px;
+  /* font-size: 18px; */
+  /* margin-left: 18px; */
+	position: relative;
+	background-color: transparent;
+	transition: 0.3s ease-in-out;
+}
+.connect-box span {
+  z-index: 1;
+}
+.connect-box::before {
+  content: "";
+  width: 0%;
+  height: 100%;
+  position: absolute;
+  background-color: #fff;
+  left: 0;
+  top: 0;
+  z-index: -1;
+  transition: 0.3s ease-in-out;
+}
+.connect-box:hover {
+  color: #121212;
+}
+.connect-box:hover::before {
+	content: "";
+	width: 100%;
+	height: 100%;
+	/* position: absolute; */
+  
+}
+
+
+.socials a:hover img {
+filter: brightness(0) saturate(100%) invert(0%) sepia(7%) saturate(98%) hue-rotate(346deg) brightness(95%) contrast(86%);
 }
