--- a/src/index.css
+++ b/src/index.css
@@ -136,6 +136,29 @@
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
+.purple-text-gradient {
+  background: #7b2ff7; /* fallback for old browsers */
+  background: -webkit-linear-gradient(to top, #7b2ff7, #f107a3); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to top, #7b2ff7, #f107a3); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.yellow-text-gradient {
+  background: #f7971e; /* fallback for old browsers */
+  background: -webkit-linear-gradient(to top, #ffd200, #f7971e); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to top, #ffd200, #f7971e); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.red-text-gradient {
+  background: #ff512f; /* fallback for old browsers */
+  background: -webkit-linear-gradient(to top, #dd2476, #ff512f); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to top, #dd2476, #ff512f); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
 
 /* canvas- styles */
 .canvas-loader {
